:arrow_up: Upgrade Logstash
Upload Logstash to the open source version with OpenSearch output
plugin.