@@ -1,4 +1,4 @@
-FROM docker.elastic.co/logstash/logstash:6.8.23
+FROM opensearchproject/logstash-oss-with-opensearch-output-plugin:7.16.3
 
 RUN /usr/share/logstash/bin/logstash-plugin install logstash-input-kinesis
 RUN /usr/share/logstash/bin/logstash-plugin install logstash-output-kinesis
@@ -8,7 +8,6 @@ RUN sed -i 's|^\(-Xm.1g\)$|#\ \1|' config/jvm.options
 
 RUN { \
       echo '-XX:+UnlockExperimentalVMOptions' ; \
-      echo '-XX:+UseCGroupMemoryLimitForHeap' ; \
       echo '-XX:MaxRAMFraction=1' ; \
       echo '-Djruby.compile.invokedynamic=false' ; \
       echo '-Djruby.compile.mode=OFF'; \
